--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Notification2" />
+
+    <Button
+        android:id="@+id/btnNotify3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Notification3" />
 </LinearLayout>
